# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.80 2016/01/25 14:54:13 dankogai Exp dankogai $
#
$Revision: 2.80 $ $Date: 2016/01/25 14:54:13 $
! t/mime-header.t
  Add more test vectors from RFC2047, pp.11-12

2.80 2016/01/25 14:54:13
! lib/Encode/MIME/Header.pm t/mime-header.t
  Address #111417: 2.79 breaks Email-MIME-1.936 tests
  https://rt.cpan.org/Ticket/Display.html?id=111417

2.79 2016/01/22 06:44:53
! lib/Encode/MIME/Header.pm t/mime-header.t
  Address: #88717:
    encode('MIME-Header') does not find word boundaries correctly
  By addressing this age-old bug, many other open RTs will be closed.
  https://rt.cpan.org/Ticket/Display.html?id=88717
! lib/Encode/MIME/Header.pm
  Address RT#107775: Inserts an empty line in an encoded header field
  https://rt.cpan.org/Ticket/Display.html?id=107775
! lib/Encode/Alias.pm
  Pulled: Update Alias.pm
  https://github.com/dankogai/p5-encode/pull/47
! Encode.xs Unicode/Unicode.xs
  Pulled: static funcs in Encode.xs and Unicode.xs
  https://github.com/dankogai/p5-encode/pull/46
! Unicode/Unicode.pm
  Pulled: Unicode.pm: Fix POD error
  https://github.com/dankogai/p5-encode/pull/45
- META.yml
! MANIFEST
  META.yml should not be included in the dist file.
  It is also obsolete.

2.78 2015/09/24 02:19:21
! Makefile.PL
  Mend pull/42 again.  This time correctly.
! lib/Encode/Supported.pod
  Applied: RT#107146: [PATCH] fix a spelling mistake
  https://rt.cpan.org/Public/Bug/Display.html?id=107146

2.77 2015/09/15 13:53:27
! Unicode/Unicode.xs Unicode/Unicode.pm
  Address RT#107043: If no BOM is found, the routine dies.
  When you decode from UTF-(16|32) without -BE or LE without BOM,
  Encode now assumes BE accordingly to RFC2781 and the Unicode
  Standard version 8.0
  https://rt.cpan.org/Public/Bug/Display.html?id=107043
! Makefile.PL encoding.t
  Mend pull/42
! Encode.xs Makefile.PL encoding.pm encoding.t
  Pulled: precompile 1252 table as that is now the Pod::Simple default