@@ -5,6 +5,10 @@
 $Revision: 2.80 $ $Date: 2016/01/25 14:54:13 $
 ! t/mime-header.t
   Add more test vectors from RFC2047, pp.11-12
+! lib/Encode/MIME/Header.pm t/mime-header.t
+  Fix decoder and rewrite encoder. Encoder should be now fully
+  compliant of RFC 2047. Decoder is less strict to be able to decode
+  strings generated by old versions of this module.
 
 2.80 2016/01/25 14:54:13
 ! lib/Encode/MIME/Header.pm t/mime-header.t
